--- a/CafeMenu/index.html
+++ b/CafeMenu/index.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+    <head>
+        <meta charset="UTF-8">
+        <title>Cafe Menu</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+            <h1>CAMPER CAFE</h1>
+            <p>Est. 2020</p>
+        </header>
+        <main>
+            <section>
+                <h2>Coffee</h2>
+            </section>
+        </main>
+    </body>
 </html>
