--- a/RothkoPainting/index.html
+++ b/RothkoPainting/index.html
@@ -6,8 +6,12 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="canvas">
-
+        <div class="frame">
+            <div class="canvas">
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
+            </div>
         </div>
     </body>
 </html>
