--- a/PhotoGallery/index.html
+++ b/PhotoGallery/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <title>Photo Gallery</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <header class="header">
+            <h1>css flexbox photo gallery</h1>
+        </header>
+        <div class="gallery">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="cat sleeping">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="cat upside up">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="cat staring">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="cat bellow a pillow">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="baby cat">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="some kitties">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="cat bellow a bed sheet">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="cat looking at you">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="cat siblings">
+        </div>
     </body>
 </html>
