--- a/NutritionLabel/index.html
+++ b/NutritionLabel/index.html
@@ -7,8 +7,17 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Nutrition Facts</h1>
-        <p>8 servings per container</p>
-        <p>Serving size 2/3 cup (55g)</p>
+        <div class="label">
+            <header>
+                <h1 class="bold">Nutrition Facts</h1>
+                <div class="divider"></div>
+                <p>8 servings per container</p>
+                <p class="bold">Serving size <span class="right">2/3 cup (55g)</span></p>
+            </header>
+            <div class="divider lg"></div>
+            <div class="calories-info">
+                <p class="bold sm-text">Amount per serving</p>
+            </div>
+        </div>
     </body>
 </html>
