--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -9,10 +9,105 @@
     </head>
     <body>
         <header>
-            <img src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="">
+            <img id="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="">
             <h1>HTML/CSS Quiz</h1>
-            <nav></nav>
+            <nav>
+                <ul>
+                  <li><a href="#student-info" accesskey="i">INFO</a></li>
+                  <li><a href="#html-questions" accesskey="h">HTML</a></li>
+                  <li><a href="#css-questions" accesskey="c">CSS</a></li>
+                </ul>
+            </nav>
         </header>
-        <main></main>
+        <main>
+            <form action="https://freecodecamp.org/practice-project/accessibility-quiz" method="post">
+                <section aria-labelledby="student-info" role="region">
+                    <h2 id="student-info">Student Info</h2>
+                    <div class="info">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="student-name">
+                    </div>
+                    <div class="info">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="student-email">
+                    </div>
+                    <div class="info">
+                        <label for="birthdate">D.O.B. <span class="sr-only">Date of Birth</span></label>
+                        <input type="date" id="birthdate" name="d.o.b.">
+                    </div>
+                </section>
+                <section aria-labelledby="html-questions" role="region">
+                    <h2 id="html-questions">HTML Questions</h2>
+                    <div class="question-block">
+                        <p>1</p>
+                        <fieldset class="question">
+                            <legend>The legend element represents a caption for the content of its
+                                parent fieldset element</legend>
+                            <ul class="answers-list">
+                                <li>
+                                    <label for="q1-a1">
+                                        <input type="radio" name="q1" id="q1-a1" value="true">True
+                                    </label>
+                                </li>
+                                <li>
+                                    <label for="q1-a2">
+                                        <input type="radio" name="q1" id="q1-a2" value="false">False
+                                    </label>
+                                </li>
+                            </ul>
+                        </fieldset>
+                    </div>
+                    <div class="question-block">
+                        <p>2</p>
+                        <fieldset class="question">
+                            <legend>A label element nesting an input element is required to have a
+                                for attribute with the same value as the input's id</legend>
+                            <ul class="answers-list">
+                                <li>
+                                    <label for="q2-a1">
+                                        <input type="radio" name="q2" id="q2-a1" value="true">True
+                                    </label>
+                                </li>
+                                <li>
+                                    <label for="q2-a2">
+                                        <input type="radio" name="q2" id="q2-a2" value="false">False
+                                    </label>
+                                </li>
+                            </ul>
+                        </fieldset>
+                    </div>
+                </section>
+                <section aria-labelledby="css-questions" role="region">
+                    <h2 id="css-questions">CSS Questions</h2>
+                    <div class="formrow">
+                        <div class="question-block">
+                            <label for="customer">Are you a front-end developer?</label>
+                        </div>
+                        <div class="answer">
+                            <select id="customer" name="customer" required>
+                              <option value="">Select an option</option>
+                              <option value="yes">Yes</option>
+                              <option value="no">No</option>
+                            </select>
+                        </div>
+                        <div class="question-block">
+                            <label for="css-questions">Do you have any questions:</label>
+                        </div>
+                        <div class="answer">
+                            <textarea name="css-questions" id="css-questions" cols="24" rows="5" placeholder="Who is flexbox..."></textarea>
+                        </div>
+                    </div>
+                </section>
+                <button type="submit">Submit</button>
+            </form>
+        </main>
+        <footer>
+            <address>
+                <a href="https://freecodecamp.org">freeCodeCamp</a><br />
+                San Francisco<br />
+                California<br />
+                USA
+            </address>
+        </footer>
     </body>
 </html>
