html finished for tribute page

--- a/Projects/TributePage/index.html
+++ b/Projects/TributePage/index.html
@@ -9,10 +9,40 @@
     <body>
         <main id="main">
             <h1>Sir George Harrison</h1>
-            <p>The man who have touched billions of hearts through his music</p>
-            <div id="img-div">
-
+            <p class="tribute">The man who have touched billions of hearts through his music</p>
+            <div id="img-div" class="img-div">
+                <img id="image" src="https://mmc.tirto.id/image/otf/700x0/2018/06/07/the-beatles--wikicommon_ratio-16x9.jpg" alt="George to the right along with his beatles mates">
+                <figcaption id="img-caption">George to the right posing along with his beatles mate</figcaption>
             </div>
+            <div id="tribute-info" class="tribute-info">
+                <h3>Here is a timeline of George's life:</h3>
+                <ul>
+                    <li><p><span class="bold">1943 </span>- Born in Liverpool England.</p></li>
+                    <li><p><span class="bold">1958 </span>- Paul Mccartney and John Lennon introduced george to the band "The Quarrymen"</p></li>
+                    <li><p><span class="bold">1960 </span>- Harrison's music career was in full swing. Lennon had renamed the band the 
+                        Beatles.Before the end of 1962, Harrison and the Beatles recorded a top 20 U.K.</p></li>
+                    <li><p><span class="bold">1963 </span>- From the start, the Beatles were a Lennon-McCartney driven band and brand. 
+                        But while the two took up much of the group's songwriting responsibilities, Harrison had shown an early interest 
+                        in contributing his own work. In the summer of 1963 he spearheaded his first song, "Don't Bother Me,"</p></li>
+                    <li><p><span class="bold">1968 </span>- George's interest in Indian music leads to the Beatles' famous entanglement 
+                        with the Maharishi Mahesh Yogi. By 1968, the Beatles were drifting apart. Both Lennon and McCartney antagonise Harrison 
+                        who walks off the set of the film Let it Be after an argument</p></li>
+                    <li><p><span class="bold">1970 </span>- Harrison is the first Beatle to start a successful solo career, selling 3m copies 
+                        worldwide with his first album, All Things Must Pass</p></li>
+                    <li><p><span class="bold">1973 </span>- Releases the hit solo album Give Me Love (Give Me Peace on Earth)</p></li>
+                    <li><p><span class="bold">1979 </span>- George focuses on a new career as a film producer, and forms the company Handmade 
+                        Films with Dennis O'Brien</p></li>
+                    <li><p><span class="bold">1980 </span>- Lennon's death inspires Harrison to write the tribute song All Those Years Ago</p></li>
+                    <li><p><span class="bold">1987 </span>- Harrison also put together a new rock group, the Travelling Wilburys, with Bob Dylan, 
+                        Jeff Lyne, Roy Orbison, and Tom Petty</p></li>
+                    <li><p><span class="bold">2001 </span>- Aged 58, he loses his fight against cancer, and the tributes pour in from all over the world</p></li>
+                </ul>
+                <p>“I think that 'Within You Without You' is one of George's best songs, one of my favorites of his. I like the arrangement, the sound, 
+                    and the words. He is clear on that song. You can hear his mind is clear and his music is clear. It's his innate talent that comes 
+                    through on that song, that brought that song together.”</p>
+                <p class="bold">--- John Lennon</p>
+            </div>
+            <h4>To know more about this incredible musician and human being read <a id="tribute-link" href="https://en.wikipedia.org/wiki/George_Harrison" target="_blank">this Wikipedia</a> entry.</h4>
         </main>
     </body>
 </html>
