--- a/Piano/index.html
+++ b/Piano/index.html
@@ -4,8 +4,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <title>Piano</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <div id="piano">
+            <img src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" class="logo" alt="freeCodeCamp Logo">
+            <div class="keys">
+                <div class="key"></div>
+                <div class="key black--key"></div>
+                <div class="key black--key"></div>
+                <div class="key"></div>
+                <div class="key black--key"></div>
+                <div class="key black--key"></div>
+                <div class="key black--key"></div>
+
+                <div class="key"></div>
+                <div class="key black--key"></div>
+                <div class="key black--key"></div>
+                <div class="key"></div>
+                <div class="key black--key"></div>
+                <div class="key black--key"></div>
+                <div class="key black--key"></div>
+
+                <div class="key"></div>
+                <div class="key black--key"></div>
+                <div class="key black--key"></div>
+                <div class="key"></div>
+                <div class="key black--key"></div>
+                <div class="key black--key"></div>
+                <div class="key black--key"></div>
+            </div>
+        </div>
     </body>
 </html>
